4_k8s/4-vehicle/5-ingress.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  namespace: vehicle
  name: vehicle.ar.olumpos.net
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`vehicle.ar.olumpos.net`)
      kind: Rule
      services:
        - name: lubelogger
          port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  namespace: vehicle
  name: vehicle.ar.olumpos.net-tls
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`vehicle.ar.olumpos.net`)
      kind: Rule
      services:
        - name: lubelogger
          port: 80
